--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<meta http-equiv="Refresh" content="0; url='https://github.com/ConnorMorehouse/ws2020-pitcher-batter-matchups/blob/main/data_viz_project.html' />
+<html>
+  <head>
+    <meta http-equiv="Refresh" content="0"; url='https://github.com/ConnorMorehouse/ws2020-pitcher-batter-matchups/blob/main/data_viz_project.html' />
+  </head>
+</html>
