--- a/index.html
+++ b/index.html
@@ -2,4 +2,7 @@
   <head>
     <meta http-equiv="Refresh" content="0"; url='https://github.com/ConnorMorehouse/ws2020-pitcher-batter-matchups/blob/main/data_viz_project.html' />
   </head>
+  <body>
+    just to see something
+  </body>
 </html>
