--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
   <head>
-    <meta http-equiv="Refresh" content="0"; url='https://github.io/ConnorMorehouse/ws2020-pitcher-batter-matchups/blob/main/data_viz_project.html' />
+    This the head 
   </head>
   <body>
-    just to see something
+    <h2>
+      title shit
+    </h2>
+    I don't really want to write it in html
   </body>
 </html>
