--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <html>
   <head>
-    This the head 
+    <meta http-equiv="Refresh" content="0"; url="https://htmlpreview.github.io/?https://github.com/ConnorMorehouse/ws2020-pitcher-batter-matchups/blob/main/data_viz_project.html"/>
   </head>
   <body>
-    <h2>
-      title shit
-    </h2>
-    I don't really want to write it in html
+    
   </body>
 </html>
