--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
   <head>
-    <meta http-equiv="Refresh" content="0"; url="https://htmlpreview.github.io/?https://github.com/ConnorMorehouse/ws2020-pitcher-batter-matchups/blob/main/data_viz_project.html"/>
+    <!-- <meta http-equiv="Refresh" content="0"; url="https://htmlpreview.github.io/?https://github.com/ConnorMorehouse/ws2020-pitcher-batter-matchups/blob/main/data_viz_project.html"/>
+    -->
   </head>
-  <body>
-    
-  </body>
+    <body>
+    https://htmlpreview.github.io/?https://github.com/ConnorMorehouse/ws2020-pitcher-batter-matchups/blob/main/data_viz_project.html
+    </body>
 </html>
